# LYA

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Readme.md  docker-compose.yml  readme.md
cmake/modules/: FindGlib.cmake  FindLibXML++.cmake
cmake/test/: ctest_custom.cmake
src/: configurations.h  configurations.h.in
src/Extensions/JavaScript/: Diagnostics.cpp  Diagnostics.h  Diagnostics.json  Extension.json  JavaScript.cpp  JavaScriptLocalizationExtractor.cpp  JavaScriptLocalizationExtractor.h  JavaScriptScanner.cpp  JavaScriptTokenScanner.cpp  JavaScriptTokenScanner.h
src/Extensions/JavaScript/Tests/Cases/KeyExtractions/: Argument_Multiple.js  Argument_Multiple_TrailingComma.js  Argument_Single.js  Argument_Single_TrailingComma.js  CallExpressionIdentifier.js  ExpressionInArgument_InvalidArgumentError_BinaryExpressions.js  Parameter_Single.js  UnmatchedSignatures.js  Whitespace_Newlines.js  Whitespace_Tabs.js
src/Extensions/JavaScript/Tests/Currents/KeyExtractions/: CallExpressionIdentifier.json  EmptyFile.json
src/Extensions/Server/: Diagnostic.cpp  Diagnostic.h  Extractor.cpp  Scanner.cpp  Scanner.h  Server.cpp  Server.h
src/Program/: CommandController.cpp  CommandController.h  CommandParser.cpp  CommandParser.h  Diagnostics.cpp  Diagnostics.h  Diagnostics.json  Exec.cpp  Extension.cpp  Extension.h  ExtensionClient.cpp  ExtensionClient.h  ExtensionTestRunner.cpp  ExtensionTestRunner.h  TextAnnotater.cpp  TextAnnotater.h  TextWriter.cpp  TextWriter.h  Types.cpp  Types.h  Utils.cpp  Utils.h
src/Program/ProtocolBuffers/: LyaClient.cpp  LyaServer.cpp  LyaService.proto  LyaSync.proto
src/ProtocolBuffers/: LyaService.proto
src/TestFramework/: Core.cpp  Core.h  Exec.cpp  ProjectTestRunner.cpp  ProjectTestRunner.h
src/cldr/common/collation/: ja.xml  ml.xml
src/cldr/common/main/: af.xml  am.xml  ar.xml  as.xml  ast.xml  az.xml  be.xml  bg.xml  bn.xml  br.xml  bs.xml  ca.xml  ccp.xml  ce.xml  chr.xml  cs.xml  cy.xml  da.xml  de.xml  de_CH.xml  dsb.xml  ee.xml  el.xml  en.xml  en_001.xml  en_AU.xml  en_CA.xml  eo.xml  es.xml  es_419.xml  es_GT.xml  es_MX.xml  es_US.xml  et.xml  eu.xml  fa.xml  fi.xml  fil.xml  fo.xml  fr.xml  (+86 more)
src/cldr/common/supplemental/: coverageLevels.xml  supplementalData.xml
src/cldr/common/transforms/: am-am_FONIPA.xml  ja_Latn-ko.xml  ja_Latn-ru.xml
src/cldr/common/validity/: unit.xml
src/core/: diagnostics.json  message_parser.cpp  message_parser.h  syntaxes.h  token_scanner.cpp  token_scanner.h  tokenizer.cpp  tokenizer.h
src/core/cldr/: cldr.cpp  cldr.h
src/core/diagnostics/: diagnostics.cpp  diagnostics.h  diagnostics.json
src/core/dtd/: attributes.dtd  folders.dtd  localizations.dtd
src/core/dtd/examples/: attributes.xml  localizations.xml
src/core/dtd/tests/: attributes.xml
src/core/dtd/tests/attributes/: attributes.xml  attributes__attribute__multiple.xml  attributes__attribute__single.xml  attributes__value__input.xml  attributes__value__option__multiple.xml  attributes__value__option__single.xml  attributes__value__parameter.xml
src/core/dtd/tests/folders/: folders_folder_multiple.xml  folders_folder_single.xml
src/core/parsers/: external_data.cpp  external_data.h
src/core/parsers/ldml/: ldml_parser.cpp  ldml_parser.h  syntaxes.cpp  syntaxes.h  token_scanner.cpp  token_scanner.h
src/core/parsers/message/: message_parser.cpp  message_parser.h  syntaxes.cpp  syntaxes.h  token_scanner.cpp  token_scanner.h
src/core/protos/: service.proto
src/core/protos/output/: service.grpc.pb.h  service.pb.cc  service.pb.h
src/dtd/: markups.dtd
src/dtd/references/: attributes.xml  folders.xml  localizations.xml  markups.xml
src/extensions/javascript/: compiler.cpp  compiler.h  diagnostics.cpp  diagnostics.h  diagnostics.json  extractor.cpp  extractor.h  javascript_language.h  javascript_localization_compiler.cpp  javascript_localization_compiler.h  javascript_localization_extractor.cpp  javascript_localization_extractor.h  javascript_token_scanner.cpp  javascript_token_scanner.h  localization_file_reader.cpp  localization_file_reader.h  token_scanner.cpp  token_scanner.h
src/extensions/javascript/javascript/: example.xml  extension.json  javascript.cpp
src/extensions/javascript/javascript/tests/cases/compilations/: text.localizations
src/extensions/javascript/javascript/tests/cases/extractions/: argument__single__trailing_comma.js
src/extensions/javascript/javascript/tests/cases/key_extractions/: ExpressionInArgument_InvalidArgumentError_Nullables.js  ExpressionInArgument_InvalidArgumentError_Primitives.js  (+4 more)
src/extensions/javascript/typescript/: extension.json  typescript.cpp
src/lib/: diagnostic.h  external_data.cpp  external_data.h  parser.h  scanner.cpp  scanner.h  test_definitions.cpp  test_definitions.h  text_annotater.cpp  text_annotater.h  text_writer.cpp  text_writer.h  types.h  utf8.cpp  utf8.h  utils.cpp  utils.h
src/lib/tests/: runner.cpp  text_writer.cpp
src/program/: command_controller.cpp  command_controller.h  command_parser.cpp  command_parser.h  configurations.h  diagnostics.cpp  diagnostics.h  diagnostics.json  extension.cpp  extension.h  extension_client.cpp  extension_client.h  extension_test_runner.cpp  extension_test_runner.h  program.cpp  text_annotater.cpp  text_annotater.h  text_writer.cpp  types.h  utils.cpp  utils.h
src/protocol_buffers/: service.proto
src/protocol_buffers/output/: service.grpc.pb.cc  service.grpc.pb.h  service.pb.cc  service.pb.h
src/protos/: service.proto
src/protos/output/: service.pb.cc  service.pb.h
src/services/extension_server/: diagnostic.cpp  diagnostic.h  extension_server.cpp  extension_server.h  scanner.cpp  scanner.h
src/test_runners/: Core.cpp  Core.h  Exec.cpp  ProjectTestRunner.cpp  definitions.cpp  definitions.h  dtd_test_runner.cpp  program.cpp  project_test_runner.cpp  project_test_runner.h
tasks/: AcceptBaseline.cpp  Clean.cpp  Diff.cpp  GenerateDiagnostics.cpp  GenerateJavaScriptDiagnostics.cpp  accept_baseline.cpp  clean.cpp  diff.cpp  download_cldr.cpp  generate_diagnostics.cpp  generate_javascript_diagnostics.cpp
(+29 files in other folders)
